--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3000
+PORT=5000
 DB_HOST=localhost
 DB_USER=vgnutzmann
 DB_PASSWORD=LSUWTqszcuSjB2PW
-MONGO_URI=mongodb+srv://vgnutzmann:<pasLSUWTqszcuSjB2PWsword>@cluster.zpxy7nl.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://veronik:<VeronikLemos>@cluster0.kufvwke.mongodb.net/?retryWrites=true&w=majority
