--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "retroshop-backend",
   "version": "1.0.0",
-  "description": "This is the api for the retroshop project",
-  "main": "server.js",
+  "description": "This is the API for the retroshop project",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
