Settled Atlas connection string to .env, added dbConnect for mongoose and settled model for product

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-PORT=5000
-DB_HOST=localhost
-DB_USER=vgnutzmann
-DB_PASSWORD=LSUWTqszcuSjB2PW
-MONGO_URI=mongodb+srv://veronik:<VeronikLemos>@cluster0.kufvwke.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECTION_STRING=mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority
