Added auth, authorize, payment, order files

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION_STRING=mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority
+
+DB_CONNECTION_STRING="mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority"
