--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-
 DB_CONNECTION_STRING="mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority"
+
+TOKEN_KEY=secrettoken
+EMAIL=youremail
+PASSWORD=yourpassword
