Created routes.js and refactored server.js

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_CONNECTION_STRING="mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority"
 
-TOKEN_KEY=secrettoken
-EMAIL=youremail
-PASSWORD=yourpassword
+TOKEN_KEY="secrettoken"
+EMAIL="youremail"
+PASSWORD="yourpassword"
