--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "",
+  "author": "Vivi Gnutzmann",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
