--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^3.0.3",
     "serve-static": "^1.15.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0"
   }
 }
