Settled ReviewModel and ProductModel Schemas

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_CONNECTION_STRING = "mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority"
 PORT = "3000"
-TOKEN_KEY = "secret123"
+SECRET_JWT= "610a2ee688cda9e724885e23cd2cfdee"
+
 EMAIL = "youremail"
 PASSWORD = "yourpassword"
