--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "build": "npm install; npm run build"
+    "dev": "nodemon app.js"
   },
   "author": "Vivi Gnutzmann",
   "license": "ISC",
