Installed cloudinary for images

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DB_CONNECTION_STRING = "mongodb+srv://admin:admin2469@cluster0.kpi7bko.mongodb.net/retroshop?retryWrites=true&w=majority"
+
 PORT = "3000"
+
 SECRET_JWT= "610a2ee688cda9e724885e23cd2cfdee"
+
+CLOUDINARY_CLOUD_NAME="dovykh024"
+CLOUDINARY_API_KEY="857136567377625"
+CLOUDINARY_API_SECRET="hq_tHKZ7oSKwQP5Hj1C8D5Mc53E"
